# awive-configurator

./: .gitignore  README.md  config.example.json  pyproject.toml
awivec/: __main__.py  analyze_image.py  draw_gcp.py  run_awive.py  video.py
