[tool.poetry]
name = "awivec"
version = "0.1.0"
description = ""
authors = ["Joseph P. <joseph.pena.q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.2"
npyplotter = {git = "https://github.com/JosephPenaQuino/npy-plotter.git"}
awive = "^2.0.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
